# hyprgrass

./: .clang-format  .editorconfig  .envrc  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  flake.nix  hyprland-touch-gestures.nix  hyprload.toml  hyprpm.toml  meson.build  meson_options.txt  wf-touch.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: checks.yml  main.yml  pin-hyprland.yml  pin-latest-hyprland.yml  update-flake.yml
docs/: configuration.md  debugging.md  event_hooks.md  lua_migration.md
examples/: meson.build
examples/hyprgrass-backlight/: Debouncer.hpp  Gesture.cpp  Gesture.hpp  README.md  SafeSignal.hpp  backlight.cpp  backlight.hpp  main.cpp  meson.build  prepare_for_sleep.cpp  prepare_for_sleep.h  sleeper_thread.hpp
examples/hyprgrass-pulse/: Debouncer.hpp  Gesture.cpp  Gesture.hpp  README.md  main.cpp  meson.build  pulse.cpp  pulse.hpp  testing.cpp
nix/: default.nix  hyprgrass-backlight.nix  hyprgrass-pulse.nix  meson-build.patch  wf-touch.nix  wf-touch.patch
scripts/: hotreload  test-pin.sh
scripts/ci/: latest-hyprland-tag  pin-latest-hyprland  test-pin.sh
src/: EmulateTouchpadGesture.hpp  GestureManager.cpp  GestureManager.hpp  Gestures.cpp  Gestures.hpp  HyprLogger.hpp  ShimTrackpadGestures.cpp  ShimTrackpadGestures.hpp  TouchVisualizer.cpp  TouchVisualizer.hpp  VecSet.cpp  VecSet.hpp  WorkspaceSwipe.cpp  WorkspaceSwipe.hpp  gestures.cpp  gestures.hpp  main.cpp  meson.build  version.hpp.in
src/bindm/: MouseDispatcherArg.cpp  MouseDispatcherArg.hpp  meson.build  test.cpp
src/gestures/: Actions.cpp  Actions.hpp  CompletedGesture.cpp  CompletedGesture.hpp  DragGesture.cpp  DragGesture.hpp  Gestures.cpp  Gestures.hpp  Logger.hpp  Shared.cpp  Shared.hpp  meson.build
src/gestures/test/: CoutLogger.hpp  MockGestureManager.cpp  MockGestureManager.hpp  README.md  meson.build  test.cpp
src/gestures/test/cases/: edgeInvalidStart.csv  edgeLeft.csv  edgeReleaseTimeout.csv  edgeSwipeTimeout.csv  swipe3.csv  swipe3MovedTooMuch.csv  swipeThenLiftoff.csv  swipeTimeout.csv
src/gestures/test/scripts/: test-gen.py
tests/: MockGestureManager.cpp  MockGestureManager.hpp  test.cpp  tests.hpp
tests/cases/: swipeLeft.csv
tests/scripts/: test-gen.py
